--- a/theme/src/new.less
+++ b/theme/src/new.less
@@ -260,7 +260,8 @@ input[type="submit"]:hover {
     width: 30%;
 }
 
-.dice-game-right {
+.dice-game-right,
+.histogram {
     border-left: 1px solid @colorH2BorderBottom;
     width: 70%;
     padding-left: 2rem;
