--- a/theme/htdocs/css/new.css
+++ b/theme/htdocs/css/new.css
@@ -5603,7 +5603,7 @@ body {
   margin: 0;
   padding: 0;
   color: #111111;
-  background-color: #bfdbff;
+  background-color: #e8f0fb;
   font: 16px/1.5 Verdana, Geneva, sans-serif;
 }
 h1,
@@ -6979,5 +6979,132 @@ input[type="submit"]:hover {
   }
   .dice-game {
     flex-direction: column;
+  }
+}
+/**
+* Style for Movie Database
+*/
+.article_movie {
+  background-color: #1b1b1b;
+  padding: 1.4rem 0.4rem;
+  border-radius: 4px;
+}
+.article_movie p {
+  color: #ddd;
+}
+.article_movie form {
+  color: #ddd;
+}
+.article_movie form label,
+.article_movie form input[type="search"] {
+  display: block;
+  margin: 0 auto;
+  width: 16em;
+  text-align: center;
+}
+.article_movie form input[type="search"],
+.article_movie form input[type="number"] {
+  text-align: center;
+  padding: 0.4em;
+  border-radius: 4px;
+  color: #ddd;
+  background-color: #222;
+  border: 1px solid #d4e5ff;
+}
+.article_movie form input[type="search"]:focus,
+.article_movie form input[type="number"]:focus {
+  border: 1px solid #c552c5;
+  color: #c552c5;
+}
+.article_movie form .year_label_movie {
+  width: auto;
+}
+.article_movie .btn_search_movie {
+  display: block;
+  margin: 0 auto;
+  background-color: transparent;
+  color: #dfdf19;
+  border-radius: 4px;
+  padding: 0.8em 8em;
+  border-color: #dfdf19;
+  transition: 0.4s all;
+}
+.article_movie .btn_search_movie:hover {
+  background-color: yellow;
+  color: #1b1b1b;
+}
+.article_movie a {
+  display: block;
+  margin: 0 auto;
+  width: 6em;
+  text-align: center;
+  text-decoration: none;
+  color: #6262f5;
+}
+.article_movie a:hover {
+  color: #c552c5;
+}
+.article_movie .warning_movie {
+  color: #ddc74c;
+}
+.article_movie .info_movie {
+  color: #95dd4c;
+}
+.navbar_movie {
+  color: #387fdd;
+  display: flex;
+  flex-flow: wrap;
+  border-bottom: 1px solid #666;
+  padding-bottom: 1rem;
+}
+.navbar_movie a {
+  font-size: 1.1rem;
+  color: #387fdd;
+  padding: 1rem 0.4rem;
+  margin: 1%;
+  border: 2px solid #387fdd;
+  text-decoration: none;
+  width: 23%;
+  text-align: center;
+  border-radius: 4px;
+  transition: 0.4s all;
+}
+.navbar_movie a:hover {
+  background-color: #387fdd;
+  color: #1b1b1b;
+}
+.header_movie {
+  color: #ddd;
+  font-family: Verdana, Geneva, sans-serif;
+  text-align: center;
+  border-bottom: none;
+}
+.table_movie {
+  color: #ddd;
+  width: 100%;
+}
+.table_movie tr {
+  box-shadow: none;
+  border-bottom: 1px solid #444;
+}
+.table_movie tr:hover {
+  box-shadow: none;
+  background-color: #1b1b1b;
+  color: #ddd;
+}
+.table_movie img {
+  border-radius: 4px;
+  border: 1px solid #333;
+}
+.footer_movie {
+  color: #ddd;
+  border-top: 1px solid #666;
+}
+.footer_movie p {
+  text-align: center;
+}
+@media (max-width: 500px) {
+  .navbar_movie a {
+    width: 100%;
   }
 }
