--- a/theme/src/kmom05.less
+++ b/theme/src/kmom05.less
@@ -225,7 +225,7 @@
   * My settings.
   */
  @bgColorHtml: #1b1b1b;
- @bgColorBody: #bfdbff;
+ @bgColorBody: #e8f0fb;
  @colorBody:   #111111;
  
  @fontFamilyHeadings: @fontFamilyCambria;
@@ -299,5 +299,193 @@ input[type="submit"]:hover {
 
     .dice-game {
         flex-direction: column;
+    }
+}
+
+/**
+* Style for Movie Database
+*/
+
+@moviedb-dark: #1b1b1b;
+@moviedb-blue: #387fdd;
+.article_movie {
+    background-color: @moviedb-dark;
+    padding: 1.4rem 0.4rem;
+    border-radius: 4px;
+
+    p {
+        color: #ddd;
+        text-align: center;
+    }
+
+    // input {
+    //     width: 16em;
+    //     text-align: center;
+    // }
+
+    form {
+        // input {
+        //     width: 16em;
+        //     text-align: center;
+        // }
+
+        color: #ddd;
+        label,
+        input[type="search"] {
+            display: block;
+            margin: 0 auto;
+            width: 16rem;
+        }
+
+        input[type="search"],
+        input[type="number"],
+        select,
+        input[type="text"] {
+            width: 16rem;
+            padding: 0.4em;
+            border-radius: 4px;
+            color: #ddd;
+            background-color: #222;
+            border: 1px solid #d4e5ff;
+            &:focus {
+                border: 1px solid #c552c5;
+                color: #c552c5;
+            }
+        }
+
+        .year_label_movie {
+            width: auto;
+        }
+    }
+
+    .btn_movie {
+        display: block;
+        margin: 0 auto 1.4rem;
+        background-color: transparent;
+        border-radius: 4px;
+        padding: 0.8em 0;
+        width: 16rem;
+        transition: 0.4s all;
+        &:hover {
+            color: @moviedb-dark;
+            cursor: pointer;
+        }
+    }
+
+    .btn_edit_movie {
+        color: #dfdf19;
+        border-color: #dfdf19;
+        &:hover {
+            background-color: yellow;
+        }
+    }
+
+    .btn_add_movie,
+    .btn_search_movie,
+    .btn_reset_movie {
+        color: #35c861;
+        border-color: #35c861;
+        &:hover {
+            background-color: #0fdb4c;
+        }
+    }
+
+    .btn_delete_movie,
+    .btn_resetdb_movie {
+        color: #ca4141;
+        border-color: #ca4141;
+        &:hover {
+            background-color: #e71717;
+        }
+    }
+
+    a {
+        display: block;
+        margin: 0 auto;
+        width: 6em;
+        text-align: center;
+        text-decoration: none;
+        color: #6262f5;
+        &:hover {
+            color: #c552c5;
+        }
+    }
+
+    .warning_movie {
+        color: #ddc74c;
+        text-align: center;
+    }
+
+    .info_movie {
+        color: #95dd4c;
+        text-align: center;
+    }
+}
+
+.navbar_movie {
+    color: @moviedb-blue;
+    display: flex;
+    flex-flow: wrap;
+    border-bottom: 1px solid #666;
+    padding-bottom: 1rem;
+    a {
+        // font-family: monospace;
+        // font-weight: bold;
+
+        font-size: 1.1rem;
+        color: @moviedb-blue;
+        padding: 1rem 0.4rem;
+        margin: 1%;
+        border: 2px solid @moviedb-blue;
+        text-decoration: none;
+        width: 23%;
+        text-align: center;
+        border-radius: 4px;
+        transition: 0.4s all;
+        &:hover {
+            background-color: @moviedb-blue;
+            color: @moviedb-dark;
+        }
+    }
+}
+
+.header_movie {
+    color: #ddd;
+    font-family: @fontFamilyVerdana;
+    text-align: center;
+    border-bottom: none;
+}
+
+.table_movie {
+    color: #ddd;
+    width: 100%;
+    tr {
+        box-shadow: none;
+        border-bottom: 1px solid #444;
+        &:hover {
+            box-shadow: none;
+            background-color: @moviedb-dark;
+            color: #ddd;  
+        }
+    }
+    img {
+        border-radius: 4px;
+        border: 1px solid #333;
+    }
+}
+
+.footer_movie {
+    color: #ddd;
+    border-top: 1px solid #666;
+    p {
+        text-align: center;
+    }
+}
+
+@media (max-width: 500px) {
+    .navbar_movie {
+        a {
+            width: 100%;
+        }
     }
 }
