--- a/htdocs/css/kmom05.css
+++ b/htdocs/css/kmom05.css
@@ -7140,3 +7140,44 @@ input[type="submit"]:hover {
     width: 100%;
   }
 }
+/**
+* Style for header
+*/
+.inner-wrap-header {
+  background-color: #333;
+  color: #eee;
+}
+.rm-desktop li ul {
+  background-color: #333;
+}
+.site-logo-text {
+  text-shadow: none;
+}
+.site-logo-text a {
+  color: #eee;
+}
+.site-logo-text a:hover {
+  text-shadow: none;
+  color: #eee;
+}
+@media (max-width: 1100px) {
+  .site-logo-text-icon {
+    display: none;
+  }
+}
+@media (max-width: 1000px) {
+  .region-main {
+    margin: 0 0.4rem;
+    width: 100%;
+  }
+}
+/**
+* Style for CMS
+*/
+.main_myCMS table {
+  border-collapse: collapse;
+}
+.main_myCMS table th,
+.main_myCMS table td {
+  border: 1px solid #ccc;
+}
