--- a/theme/src/kmom06.less
+++ b/theme/src/kmom06.less
@@ -493,6 +493,12 @@ input[type="submit"]:hover {
 /**
 * Style for header
 */
+.inner-wrap-footer,
+.outer-wrap {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .inner-wrap-header {
     background-color: #333;
     color: @colorH3BorderBottom;
